--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 lesson1/ex01/obj/*
+lesson1/ex01/bin/*
 lesson1/ex02/obj/*
+lesson1/ex02/bin/*
 lesson1/ex03/obj/*
+lesson1/ex03/bin/*
 lesson1/ex04/obj/*
+lesson1/ex04/bin/*
 
