--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ lesson1/ex03/bin/*
 lesson1/ex04/obj/*
 lesson1/ex04/bin/*
 
+lesson2/ex01/obj/*
+lesson2/ex01/bin/*
+lesson2/ex02/obj/*
+lesson2/ex02/bin/*
+lesson2/ex03/obj/*
+lesson2/ex03/bin/*
