--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@ lesson2/ex02/obj/*
 lesson2/ex02/bin/*
 lesson2/ex03/obj/*
 lesson2/ex03/bin/*
+
+lesson3/ex01/obj/*
+lesson3/ex01/bin/*
+lesson3/ex02/obj/*
+lesson3/ex02/bin/*
+lesson3/ex03/obj/*
+lesson3/ex03/bin/*
