--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ lesson3/ex02/obj/*
 lesson3/ex02/bin/*
 lesson3/ex03/obj/*
 lesson3/ex03/bin/*
+
+lesson4/ex01/obj/*
+lesson4/ex01/bin/*
+lesson4/ex02/obj/*
+lesson4/ex02/bin/*
+lesson4/ex03/obj/*
+lesson4/ex03/bin/*
