--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ lesson4/ex02/obj/*
 lesson4/ex02/bin/*
 lesson4/ex03/obj/*
 lesson4/ex03/bin/*
+
+lesson5/ex01/obj/*
+lesson5/ex01/bin/*
+lesson5/ex02/obj/*
+lesson5/ex02/bin/*
+lesson5/ex03/obj/*
+lesson5/ex03/bin/*
