--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ lesson5/ex02/obj/*
 lesson5/ex02/bin/*
 lesson5/ex03/obj/*
 lesson5/ex03/bin/*
+
+lesson6/ex01/obj/*
+lesson6/ex01/bin/*
+lesson6/ex02/obj/*
+lesson6/ex02/bin/*
